# software-dev-ressources

./: 404.html  LICENSE  dendron.code-workspace  dendron.yml  index.html  languages.python.minus-m-pip.md  mkdocs.yml  package.json  pyproject.toml  tdd-where-did-it-all-go-wrong.md
.github/workflows/: deploy.yml
404/: index.html
500/: index.html
architecture/architecture/: index.html
architecture/architecture.arc42/: index.html
architecture/architecture.clean/: index.html
architecture/architecture.clean.go-app-structure/: index.html
architecture/architecture.software-architecture-vs-code/: index.html
architecture/architecture.why-architecture-comes-before-coding/: index.html
ci-cd/: index.html
data/: dendron.json  fuse.json  notes.json  tree.json
data/meta/: 2z9akjjnly8kksdwnfc4scp.json  403.json  66ypdksmsqlsebofipbuyay.json  flz3kmt6kiyv3cjxapamuiq.json  zpnqg6bt1wcsuyx2moijqza.json
data/notes/: 2z9akjjnly8kksdwnfc4scp.html  2z9akjjnly8kksdwnfc4scp.md  66ypdksmsqlsebofipbuyay.md  (+5 more)
docs/: dora.md  paradigms.functional.md  root.md
dora/: index.html
modern-software-development/: index.html
notes/: architecture.arc42.md  architecture.clean.go-app-structure.md  architecture.clean.md  architecture.md  architecture.software-architecture-vs-code.md  ci-cd.md  languages.rust.compile-times.md  languages.rust.integers.md  languages.rust.md  languages.rust.property-based-testing-in-rust-with-arbitrary.md  modern-software-development.md  root.md
paradigms.functional/: index.html
search/: search_index.json
tdd-where-did-it-all-go-wrong/: index.html
(+42 files in other folders)
